# serializer version: 1
# name: test_restore_sensor_save_state[missing_stored_data][stored-data]
  list([
    dict({
      'config': list([
      ]),
      'source': dict({
        'type': 'notification',
        'value': None,
      }),
    }),
  ])
# ---
# name: test_restore_sensor_save_state[no_restore_for_sensor.kitchen_effect_brightness][stored-data]
  list([
    None,
  ])
# ---
# name: test_restore_sensor_save_state[no_restore_for_sensor.kitchen_effect_color][stored-data]
  list([
    None,
  ])
# ---
# name: test_restore_sensor_save_state[no_restore_for_sensor.kitchen_effect_duration][stored-data]
  list([
    None,
  ])
# ---
# name: test_restore_sensor_save_state[no_restore_for_sensor.kitchen_effect_type][stored-data]
  list([
    None,
  ])
# ---
# name: test_restore_sensor_save_state[switch_info][stored-data]
  list([
    dict({
      'config': list([
        dict({
          'brightness': 50.0,
          'color': 'red',
          'duration': 4,
          'effect': 'solid',
        }),
      ]),
      'source': dict({
        'type': 'notification',
        'value': 'doors_open',
      }),
    }),
  ])
# ---
# name: test_restore_sensor_save_state[switch_info_for_override_service_call][stored-data]
  list([
    dict({
      'config': list([
        dict({
          'brightness': 100.0,
          'color': 'blue',
          'duration': None,
          'effect': 'solid',
        }),
      ]),
      'source': dict({
        'type': 'service',
        'value': 'lampie.override',
      }),
    }),
  ])
# ---
# name: test_restore_sensor_save_state[switch_info_with_numeric_color][stored-data]
  list([
    dict({
      'config': list([
        dict({
          'brightness': 50.0,
          'color': 80,
          'duration': 4,
          'effect': 'solid',
        }),
      ]),
      'source': dict({
        'type': 'notification',
        'value': 'doors_open',
      }),
    }),
  ])
# ---
# name: test_restore_state[missing_stored_data][switch_info]
  dict({
    'disable_clear_notification_id': 'switch.kitchen_disable_config_2x_tap_to_clear_notifications',
    'expiration': ExpirationInfoSnapshot({
      'cancel_listener': None,
      'expires_at': None,
      'started_at': None,
    }),
    'led_config': tuple(
    ),
    'led_config_source': dict({
      'type': <LEDConfigSourceType.NOTIFICATION: 'notification'>,
      'value': None,
    }),
    'local_protetction_id': 'switch.kitchen_local_protection',
    'priorities': tuple(
      'doors_open',
    ),
  })
# ---
# name: test_restore_state[no_restore_for_sensor.kitchen_effect_brightness][switch_info]
  dict({
    'disable_clear_notification_id': 'switch.kitchen_disable_config_2x_tap_to_clear_notifications',
    'expiration': ExpirationInfoSnapshot({
      'cancel_listener': None,
      'expires_at': None,
      'started_at': None,
    }),
    'led_config': tuple(
    ),
    'led_config_source': dict({
      'type': <LEDConfigSourceType.NOTIFICATION: 'notification'>,
      'value': None,
    }),
    'local_protetction_id': 'switch.kitchen_local_protection',
    'priorities': tuple(
      'doors_open',
    ),
  })
# ---
# name: test_restore_state[no_restore_for_sensor.kitchen_effect_color][switch_info]
  dict({
    'disable_clear_notification_id': 'switch.kitchen_disable_config_2x_tap_to_clear_notifications',
    'expiration': ExpirationInfoSnapshot({
      'cancel_listener': None,
      'expires_at': None,
      'started_at': None,
    }),
    'led_config': tuple(
    ),
    'led_config_source': dict({
      'type': <LEDConfigSourceType.NOTIFICATION: 'notification'>,
      'value': None,
    }),
    'local_protetction_id': 'switch.kitchen_local_protection',
    'priorities': tuple(
      'doors_open',
    ),
  })
# ---
# name: test_restore_state[no_restore_for_sensor.kitchen_effect_duration][switch_info]
  dict({
    'disable_clear_notification_id': 'switch.kitchen_disable_config_2x_tap_to_clear_notifications',
    'expiration': ExpirationInfoSnapshot({
      'cancel_listener': None,
      'expires_at': None,
      'started_at': None,
    }),
    'led_config': tuple(
    ),
    'led_config_source': dict({
      'type': <LEDConfigSourceType.NOTIFICATION: 'notification'>,
      'value': None,
    }),
    'local_protetction_id': 'switch.kitchen_local_protection',
    'priorities': tuple(
      'doors_open',
    ),
  })
# ---
# name: test_restore_state[no_restore_for_sensor.kitchen_effect_type][switch_info]
  dict({
    'disable_clear_notification_id': 'switch.kitchen_disable_config_2x_tap_to_clear_notifications',
    'expiration': ExpirationInfoSnapshot({
      'cancel_listener': None,
      'expires_at': None,
      'started_at': None,
    }),
    'led_config': tuple(
    ),
    'led_config_source': dict({
      'type': <LEDConfigSourceType.NOTIFICATION: 'notification'>,
      'value': None,
    }),
    'local_protetction_id': 'switch.kitchen_local_protection',
    'priorities': tuple(
      'doors_open',
    ),
  })
# ---
# name: test_restore_state[switch_info][switch_info]
  dict({
    'disable_clear_notification_id': 'switch.kitchen_disable_config_2x_tap_to_clear_notifications',
    'expiration': ExpirationInfoSnapshot({
      'cancel_listener': None,
      'expires_at': None,
      'started_at': None,
    }),
    'led_config': tuple(
      dict({
        'brightness': 50.0,
        'color': <Color.RED: 0>,
        'duration': 4,
        'effect': <Effect.SOLID: 1>,
      }),
    ),
    'led_config_source': dict({
      'type': <LEDConfigSourceType.NOTIFICATION: 'notification'>,
      'value': 'doors_open',
    }),
    'local_protetction_id': 'switch.kitchen_local_protection',
    'priorities': tuple(
      'doors_open',
    ),
  })
# ---
# name: test_restore_state[switch_info_for_override_service_call][switch_info]
  dict({
    'disable_clear_notification_id': 'switch.kitchen_disable_config_2x_tap_to_clear_notifications',
    'expiration': ExpirationInfoSnapshot({
      'cancel_listener': None,
      'expires_at': None,
      'started_at': None,
    }),
    'led_config': tuple(
      dict({
        'brightness': 100.0,
        'color': <Color.BLUE: 170>,
        'duration': None,
        'effect': <Effect.SOLID: 1>,
      }),
    ),
    'led_config_source': dict({
      'type': <LEDConfigSourceType.SERVICE: 'service'>,
      'value': 'lampie.override',
    }),
    'local_protetction_id': 'switch.kitchen_local_protection',
    'priorities': tuple(
      'doors_open',
    ),
  })
# ---
# name: test_restore_state[switch_info_with_numeric_color][switch_info]
  dict({
    'disable_clear_notification_id': 'switch.kitchen_disable_config_2x_tap_to_clear_notifications',
    'expiration': ExpirationInfoSnapshot({
      'cancel_listener': None,
      'expires_at': None,
      'started_at': None,
    }),
    'led_config': tuple(
      dict({
        'brightness': 50.0,
        'color': 80,
        'duration': 4,
        'effect': <Effect.SOLID: 1>,
      }),
    ),
    'led_config_source': dict({
      'type': <LEDConfigSourceType.NOTIFICATION: 'notification'>,
      'value': 'doors_open',
    }),
    'local_protetction_id': 'switch.kitchen_local_protection',
    'priorities': tuple(
      'doors_open',
    ),
  })
# ---
# name: test_sensors[sensor.kitchen_effect_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:timer',
    'original_name': 'Effect brightness',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'brightness',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_brightness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.kitchen_effect_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect brightness',
      'icon': 'mdi:timer',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.kitchen_effect_color-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_color',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:palette',
    'original_name': 'Effect color',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'color',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_color',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.kitchen_effect_color-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect color',
      'icon': 'mdi:palette',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_color',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.kitchen_effect_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:timer',
    'original_name': 'Effect duration',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'duration',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_duration',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_sensors[sensor.kitchen_effect_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect duration',
      'icon': 'mdi:timer',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.kitchen_effect_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:lightning-bolt',
    'original_name': 'Effect type',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'effect',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_effect',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.kitchen_effect_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect type',
      'icon': 'mdi:lightning-bolt',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.kitchen_notification-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_notification',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:circle-box',
    'original_name': 'Notification',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notification',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_notification',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.kitchen_notification-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Notification',
      'icon': 'mdi:circle-box',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_notification',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_effect_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:timer',
    'original_name': 'Effect brightness',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'brightness',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_brightness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_effect_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect brightness',
      'icon': 'mdi:timer',
      'individual': list([
        80.0,
        20.0,
        100.0,
        80.0,
        20.0,
        80.0,
        100.0,
      ]),
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '68.5714285714286',
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_effect_color-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_color',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:palette',
    'original_name': 'Effect color',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'color',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_color',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_effect_color-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect color',
      'icon': 'mdi:palette',
      'individual': list([
        'red',
        'orange',
        'yellow',
        1,
        24,
        45,
        'white',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_color',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'multi',
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_effect_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:timer',
    'original_name': 'Effect duration',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'duration',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_duration',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_effect_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect duration',
      'icon': 'mdi:timer',
      'individual': list([
        5,
        10,
        5,
        5,
        10,
        5,
        10,
      ]),
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_effect_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:lightning-bolt',
    'original_name': 'Effect type',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'effect',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_effect',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_effect_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect type',
      'icon': 'mdi:lightning-bolt',
      'individual': list([
        'slow_blink',
        'solid',
        'slow_blink',
        'slow_blink',
        'solid',
        'slow_blink',
        'solid',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'multi',
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_notification-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_notification',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:circle-box',
    'original_name': 'Notification',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notification',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_notification',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_advanced_led_config[sensor.kitchen_notification-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Notification',
      'icon': 'mdi:circle-box',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_notification',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'doors_open',
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_effect_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:timer',
    'original_name': 'Effect brightness',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'brightness',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_brightness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_effect_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect brightness',
      'icon': 'mdi:timer',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100.0',
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_effect_color-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_color',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:palette',
    'original_name': 'Effect color',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'color',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_color',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_effect_color-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect color',
      'icon': 'mdi:palette',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_color',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cyan',
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_effect_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:timer',
    'original_name': 'Effect duration',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'duration',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_duration',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_effect_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect duration',
      'icon': 'mdi:timer',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_effect_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_effect_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:lightning-bolt',
    'original_name': 'Effect type',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'effect',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_effect',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_effect_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Effect type',
      'icon': 'mdi:lightning-bolt',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_effect_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'slow_blink',
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_notification-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kitchen_notification',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:circle-box',
    'original_name': 'Notification',
    'platform': 'lampie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'notification',
    'unique_id': 'zha_mock-ieee:kitchen_light_kitchen_notification',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_simple_led_config[sensor.kitchen_notification-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Notification',
      'icon': 'mdi:circle-box',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kitchen_notification',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'medicine',
  })
# ---
